--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
+    "@tailwindcss/forms": "^0.5.10",
     "gh-pages": "^6.3.0",
     "svelte": "^5.35.5",
     "vite": "^7.0.4"
