--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "@tailwindcss/forms": "^0.5.10",
+    "flowbite": "^3.1.2",
+    "flowbite-svelte": "^1.11.2",
     "gh-pages": "^6.3.0",
     "svelte": "^5.35.5",
     "vite": "^7.0.4"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "svelte-awesome-color-picker": "^4.0.2",
     "tailwindcss": "^4.1.11"
   }
 }
